# pptx-exporter

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
src/pptx_exporter/: __init__.py  exporter.py  gui.py  main.py  utils.py
src/pptx_exporter/gui/: __init__.py  app.py  settings.py  tokens.py
src/pptx_exporter/gui/widgets/: __init__.py  action_area.py  card.py  drop_zone.py  error_banner.py  file_list.py  file_panel.py  settings_card.py  status_pill.py
src/pptx_exporter/tkdnd/: __init__.py
tests/: test_dnd.py  test_exporter.py  test_utils.py
