[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-exporter"
version = "1.0.1"
description = "Export PowerPoint slide objects as transparent PNG images"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Fikarn" }]
requires-python = ">=3.10"
keywords = ["powerpoint", "pptx", "export", "png", "transparent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "python-pptx>=0.6.23",
    "Pillow>=10.0.0",
    "customtkinter>=5.2",
    "tkinterdnd2>=0.4",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]

[project.scripts]
pptx-exporter = "pptx_exporter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "dist", "build", ".venv", "venv"]
